PR-3884: Part 1 migrate commands endpoints.  (#68)
- created commands endpoint + river jobs for commands execution
- save state of command in db
- added integration tests
