# models/synthetic_devices.go
@@ -186,15 +186,35 @@ var SyntheticDeviceWhere = struct {
 
 // SyntheticDeviceRels is where relationship names are stored.
 var SyntheticDeviceRels = struct {
-}{}
+	VehicleTokenDeviceCommandRequests string
+}{
+	VehicleTokenDeviceCommandRequests: "VehicleTokenDeviceCommandRequests",
+}
 
 // syntheticDeviceR is where relationships are stored.
 type syntheticDeviceR struct {
+	VehicleTokenDeviceCommandRequests DeviceCommandRequestSlice `boil:"VehicleTokenDeviceCommandRequests" json:"VehicleTokenDeviceCommandRequests" toml:"VehicleTokenDeviceCommandRequests" yaml:"VehicleTokenDeviceCommandRequests"`
 }
 
 // NewStruct creates a new relationship struct
 func (*syntheticDeviceR) NewStruct() *syntheticDeviceR {
 	return &syntheticDeviceR{}
+}
+
+func (o *SyntheticDevice) GetVehicleTokenDeviceCommandRequests() DeviceCommandRequestSlice {
+	if o == nil {
+		return nil
+	}
+
+	return o.R.GetVehicleTokenDeviceCommandRequests()
+}
+
+func (r *syntheticDeviceR) GetVehicleTokenDeviceCommandRequests() DeviceCommandRequestSlice {
+	if r == nil {
+		return nil
+	}
+
+	return r.VehicleTokenDeviceCommandRequests
 }
 
 // syntheticDeviceL is where Load methods for each relationship are stored.
@@ -511,6 +531,186 @@ func (q syntheticDeviceQuery) Exists(ctx context.Context, exec boil.ContextExecu
 	}
 
 	return count > 0, nil
+}
+
+// VehicleTokenDeviceCommandRequests retrieves all the device_command_request's DeviceCommandRequests with an executor via vehicle_token_id column.
+func (o *SyntheticDevice) VehicleTokenDeviceCommandRequests(mods ...qm.QueryMod) deviceCommandRequestQuery {
+	var queryMods []qm.QueryMod
+	if len(mods) != 0 {
+		queryMods = append(queryMods, mods...)
+	}
+
+	queryMods = append(queryMods,
+		qm.Where("\"tesla_oracle\".\"device_command_requests\".\"vehicle_token_id\"=?", o.VehicleTokenID),
+	)
+
+	return DeviceCommandRequests(queryMods...)
+}
+
+// LoadVehicleTokenDeviceCommandRequests allows an eager lookup of values, cached into the
+// loaded structs of the objects. This is for a 1-M or N-M relationship.
+func (syntheticDeviceL) LoadVehicleTokenDeviceCommandRequests(ctx context.Context, e boil.ContextExecutor, singular bool, maybeSyntheticDevice interface{}, mods queries.Applicator) error {
+	var slice []*SyntheticDevice
+	var object *SyntheticDevice
+
+	if singular {
+		var ok bool
+		object, ok = maybeSyntheticDevice.(*SyntheticDevice)
+		if !ok {
+			object = new(SyntheticDevice)
+			ok = queries.SetFromEmbeddedStruct(&object, &maybeSyntheticDevice)
+			if !ok {
+				return errors.New(fmt.Sprintf("failed to set %T from embedded struct %T", object, maybeSyntheticDevice))
+			}
+		}
+	} else {
+		s, ok := maybeSyntheticDevice.(*[]*SyntheticDevice)
+		if ok {
+			slice = *s
+		} else {
+			ok = queries.SetFromEmbeddedStruct(&slice, maybeSyntheticDevice)
+			if !ok {
+				return errors.New(fmt.Sprintf("failed to set %T from embedded struct %T", slice, maybeSyntheticDevice))
+			}
+		}
+	}
+
+	args := make(map[interface{}]struct{})
+	if singular {
+		if object.R == nil {
+			object.R = &syntheticDeviceR{}
+		}
+		args[object.VehicleTokenID] = struct{}{}
+	} else {
+		for _, obj := range slice {
+			if obj.R == nil {
+				obj.R = &syntheticDeviceR{}
+			}
+			args[obj.VehicleTokenID] = struct{}{}
+		}
+	}
+
+	if len(args) == 0 {
+		return nil
+	}
+
+	argsSlice := make([]interface{}, len(args))
+	i := 0
+	for arg := range args {
+		argsSlice[i] = arg
+		i++
+	}
+
+	query := NewQuery(
+		qm.From(`tesla_oracle.device_command_requests`),
+		qm.WhereIn(`tesla_oracle.device_command_requests.vehicle_token_id in ?`, argsSlice...),
+	)
+	if mods != nil {
+		mods.Apply(query)
+	}
+
+	results, err := query.QueryContext(ctx, e)
+	if err != nil {
+		return errors.Wrap(err, "failed to eager load device_command_requests")
+	}
+
+	var resultSlice []*DeviceCommandRequest
+	if err = queries.Bind(results, &resultSlice); err != nil {
+		return errors.Wrap(err, "failed to bind eager loaded slice device_command_requests")
+	}
+
+	if err = results.Close(); err != nil {
+		return errors.Wrap(err, "failed to close results in eager load on device_command_requests")
+	}
+	if err = results.Err(); err != nil {
+		return errors.Wrap(err, "error occurred during iteration of eager loaded relations for device_command_requests")
+	}
+
+	if len(deviceCommandRequestAfterSelectHooks) != 0 {
+		for _, obj := range resultSlice {
+			if err := obj.doAfterSelectHooks(ctx, e); err != nil {
+				return err
+			}
+		}
+	}
+	if singular {
+		object.R.VehicleTokenDeviceCommandRequests = resultSlice
+		for _, foreign := range resultSlice {
+			if foreign.R == nil {
+				foreign.R = &deviceCommandRequestR{}
+			}
+			foreign.R.VehicleToken = object
+		}
+		return nil
+	}
+
+	for _, foreign := range resultSlice {
+		for _, local := range slice {
+			if queries.Equal(local.VehicleTokenID, foreign.VehicleTokenID) {
+				local.R.VehicleTokenDeviceCommandRequests = append(local.R.VehicleTokenDeviceCommandRequests, foreign)
+				if foreign.R == nil {
+					foreign.R = &deviceCommandRequestR{}
+				}
+				foreign.R.VehicleToken = local
+				break
+			}
+		}
+	}
+
+	return nil
+}
+
+// AddVehicleTokenDeviceCommandRequests adds the given related objects to the existing relationships
+// of the synthetic_device, optionally inserting them as new records.
+// Appends related to o.R.VehicleTokenDeviceCommandRequests.
+// Sets related.R.VehicleToken appropriately.
+func (o *SyntheticDevice) AddVehicleTokenDeviceCommandRequests(ctx context.Context, exec boil.ContextExecutor, insert bool, related ...*DeviceCommandRequest) error {
+	var err error
+	for _, rel := range related {
+		if insert {
+			queries.Assign(&rel.VehicleTokenID, o.VehicleTokenID)
+			if err = rel.Insert(ctx, exec, boil.Infer()); err != nil {
+				return errors.Wrap(err, "failed to insert into foreign table")
+			}
+		} else {
+			updateQuery := fmt.Sprintf(
+				"UPDATE \"tesla_oracle\".\"device_command_requests\" SET %s WHERE %s",
+				strmangle.SetParamNames("\"", "\"", 1, []string{"vehicle_token_id"}),
+				strmangle.WhereClause("\"", "\"", 2, deviceCommandRequestPrimaryKeyColumns),
+			)
+			values := []interface{}{o.VehicleTokenID, rel.ID}
+
+			if boil.IsDebug(ctx) {
+				writer := boil.DebugWriterFrom(ctx)
+				fmt.Fprintln(writer, updateQuery)
+				fmt.Fprintln(writer, values)
+			}
+			if _, err = exec.ExecContext(ctx, updateQuery, values...); err != nil {
+				return errors.Wrap(err, "failed to update foreign table")
+			}
+
+			queries.Assign(&rel.VehicleTokenID, o.VehicleTokenID)
+		}
+	}
+
+	if o.R == nil {
+		o.R = &syntheticDeviceR{
+			VehicleTokenDeviceCommandRequests: related,
+		}
+	} else {
+		o.R.VehicleTokenDeviceCommandRequests = append(o.R.VehicleTokenDeviceCommandRequests, related...)
+	}
+
+	for _, rel := range related {
+		if rel.R == nil {
+			rel.R = &deviceCommandRequestR{
+				VehicleToken: o,
+			}
+		} else {
+			rel.R.VehicleToken = o
+		}
+	}
+	return nil
 }
 
 // SyntheticDevices retrieves all the records using an executor.
